--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Jigarsolanki/angular-chat-client/issues"
   },
-  "homepage": "https://github.com/Jigarsolanki/angular-chat-client"
+  "homepage": "https://github.com/Jigarsolanki/angular-chat-client",
+  "dependencies": {
+    "express": "~4.5.1",
+    "socket.io": "~1.0.6"
+  }
 }
